--- a/VRChat/11/944011.html
+++ b/VRChat/11/944011.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sb5QM4irOVfQ8vqgbWIy0s7xm6sppJERG2NPTLIhl1A="></script>
+    "69d8LiihowvYR3tyah7Na95cPtwKg0HwnFeThaV5RN0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"生体武器「テバサキ（T-83K）」【VRChat向け】","description":"生体武器「テバサキ（T-83K）」【VRChat向け】\n\n※更新しました。\n・テクスチャの塗り直し\n・刀身展開をシェイプキーからボーン方式へ変更\n・歯の収納と蠢き、柄の脈動シェイプキーを追加\n\nシェーダーはStandardを使用するか下記シェーダーをご利用ください。\n（ https://nizyou2.booth.pm/items/2007506 )","url":"https://booth.pm/ja/items/944011","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d587fec6-51e9-4d9d-afa4-8f9825678eca/i/944011/59b0540b-332a-4d35-9b52-c6f56477e4f5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sb5QM4irOVfQ8vqgbWIy0s7xm6sppJERG2NPTLIhl1A="></script>
+    nonce="69d8LiihowvYR3tyah7Na95cPtwKg0HwnFeThaV5RN0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/944011/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/944011/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
