--- a/VRChat/23/940223.html
+++ b/VRChat/23/940223.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "n01qBkpEblJWQWNP0C3fr7wKnCsicPXxPOuFHShO6u0="></script>
+    "07R+1wSarEiRWNZE6I3ctCgCMs5YTDXfYqj9VgIib5M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"小物「ランタン」【VRChat向け】","description":"--------------------------------------------------\n\n◆ランタン\n\nUnity（主にVRChat）で使える小物「ランタン」です。\n中にライトを仕込んでお使い下さい。\n\n--------------------------------------------------\n\n◆「ランタン.unitypackage」の中身と情報\n\n□ランタン\n┣□Materials\n┃┣〇BaceColor.png\t：ベーステクスチャ\n┃┣〇HeightMap.png\t：ハイトマップテクスチャ\n┃┣〇Material.mat\t：マテリアル（ノーマルシェーダー）\n┃┣〇Metallic.png\t：メタリックテクスチャ\n┃┗〇NormalMap.png\t：ノーマルマップテクスチャ\n┗〇ランタン.fbx\t：モデルデータ\n\nポリゴン数\t：△468\n\n--------------------------------------------------\n\n◆注意事項\n\n面倒な利用規約なんてありません。フリー素材です。\n良心に従ってご自由にお使い下さい。\n\n--------------------------------------------------\n\n◆二条阜（ツイッター：https://twitter.com/nizyou2）","url":"https://booth.pm/ja/items/940223","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d587fec6-51e9-4d9d-afa4-8f9825678eca/i/940223/5d3fe0f4-fa15-4e4d-82e6-c5de3bcb6f0f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="n01qBkpEblJWQWNP0C3fr7wKnCsicPXxPOuFHShO6u0="></script>
+    nonce="07R+1wSarEiRWNZE6I3ctCgCMs5YTDXfYqj9VgIib5M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/940223/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/940223/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
