--- a/VRChat/71/938771.html
+++ b/VRChat/71/938771.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MSHqFEFPDwn7QV3pJW6TAZCbmt2hRuo9AKvNvch6xpc="></script>
+    "Cint2TceZcum7JseyNE5N89cIJKERYZWsMjfm9bf5Qs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おためしあんだーりむめがね","description":"なんの変哲もないアンダーリムの赤眼鏡です。VRChatでの利用を想定しています。\n\nVRChatでもっと眼鏡流行れ！という気持ちで配布をしてみました。\n\n(7/23追加)ノーマルタイプとやや幅広タイプの2種類を同梱しています。モデルに合わせてご利用ください。\n\n■使用上の注意\nモデルに組み込んでの利用→商用、非商用を問わず自由に改変、使用、再配布可\n単体での改変、再配布→不可\n\n使用したSSをSNS等に上げると作者が喜びます\n\n■利用方法や仕様\nfbxファイルなので、そのままUnityにぶちこんでHeadアーマチュアの下に入れれば使うことが出来るかと思います。\nテクスチャを貼っていないので、シェーダーの設定を推奨します。\n\nポリゴン数：420(幅広タイプ440)\n\n\nはじめての素材配布なため何か不備等あるかもしれません、その際はツイッター(@popico_VT)までご連絡いただければ幸いです。","url":"https://booth.pm/ja/items/938771","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/13e72562-5481-4676-9ce5-6a97e2f60d62/i/938771/789f337f-d166-410e-9653-1470113fa6c7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MSHqFEFPDwn7QV3pJW6TAZCbmt2hRuo9AKvNvch6xpc="></script>
+    nonce="Cint2TceZcum7JseyNE5N89cIJKERYZWsMjfm9bf5Qs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/938771/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               535
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/938771/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               535
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
