--- a/VRChat/61/938561.html
+++ b/VRChat/61/938561.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "nwAcLK05CF50gkhUU0QtoAalKv6tzdRpIaYuQenccVg="></script>
+    "TZyOJcaj1Cs7sZdq5xGJWxgX2lwOKAHTsimZ56eVL6M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat/MMD/他使用可　クレープ","description":"三角面数3603\n\n主にVRchatでの使用を想定しています。\nMMDでの使用の場合はFBXファイルをblenderで読み込みMMDファイルへの変換が必要です。\n\n著作権は作者であるtoshiziが保有しています。\n\n\n【内容物】\n・3Dデータ（FBX形式）\n・テクスチャ（PNG形式）\n・サンプル画像\n・readme.txt\n\n\n【免責事項】\n・当データを使用することで何らかのトラブル・損失及び損害等が生じた場合、\n　それがいかなるものであっても制作者および配布元は一切責任を負いません。\n\n\n【許可事項】\n・VRchat以外での使用\n・モデルデータ・テクスチャの改変\n・商用利用（要クレジット記載）\n・動画（Vtuber活動、収益化済み含む）・静止画\n\n\n【禁止事項】\n・再配布・再販売\n・作者詐称\n\n\n以下は必須ではありませんが、していただけるとありがたいです\n・動画等、コンテンツ作成時の使用報告\n\n\nなにかあればこちらまで\nhttps://twitter.com/toshizi_hone","url":"https://booth.pm/ja/items/938561","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b4d32ad4-2d90-4f9a-b2c6-95372fd3bff8/i/938561/ff912870-5729-48f8-ab45-7b4f1eaf989f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nwAcLK05CF50gkhUU0QtoAalKv6tzdRpIaYuQenccVg="></script>
+    nonce="TZyOJcaj1Cs7sZdq5xGJWxgX2lwOKAHTsimZ56eVL6M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/938561/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               283
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/938561/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               283
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
