--- a/VRChat/35/937735.html
+++ b/VRChat/35/937735.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wAR4vlrQ3p+RjblELYm+IvDeXuOooHUTwmUJvHaTjwk="></script>
+    "E8jzjfQMIRLOtKZ7tebc3VMA0Rceys8FwRmVnf/0xag="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"狐アクセサリセット","description":"VRchat向けアクセサリ：狐アクセサリセット\n\nキツネ耳 436ポリゴン\nキツネ尻尾 914ポリゴン\nComponentにDynamicボーン設定がされております。\n\n\n[利用規約]\n\n・営利/非営利問わずご利用いただけます。\n\n・再配布は禁止です。\n\n本モデルデータを使用することによって何らかのトラブル・損失及び損害等が発生した場合でも当方は一切の責任を負いません。\n\nデータはAsset内にある元データのままです。\n導入方法はReadmeをご確認ください。","url":"https://booth.pm/ja/items/937735","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/985386bb-bc6d-41c5-b70d-4286e61a3033/i/937735/b10b4c95-291a-48c1-9ca1-a8438d0f1a12_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wAR4vlrQ3p+RjblELYm+IvDeXuOooHUTwmUJvHaTjwk="></script>
+    nonce="E8jzjfQMIRLOtKZ7tebc3VMA0Rceys8FwRmVnf/0xag="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/937735/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/937735/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
