--- a/VRChat/94/937694.html
+++ b/VRChat/94/937694.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FopDo1jfe462a1eBhm4bHBzaMK/XERETiyfpg/CFAFQ="></script>
+    "N4oMnAZhG1HLm4CvxNQLIImmoQVResPt4r40CWGNu6Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]喫茶店小物3点セット","description":"VRchat向けアクセサリ：喫茶店小物セット\n\nミルクピッチャー：1020ポリゴン\nおぼん2種類：176ポリゴン\nお砂糖入れ：5898ポリゴン\n上記の三点セットです。\n\n\nこちらのモデルデータは有料モデルですが、フリーで配布しているモデルでもあります。フリーでご利用頂く場合はそちらをご利用ください。\n\n[利用規約]\n\n・営利/非営利問わずご利用いただけます。\n\n・再配布は禁止です。\n\n本モデルデータを使用することによって何らかのトラブル・損失及び損害等が発生した場合でも当方は一切の責任を負いません。\n\nデータはAsset内にある元データのままです。\n導入方法はReadmeをご確認ください。","url":"https://booth.pm/ja/items/937694","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/985386bb-bc6d-41c5-b70d-4286e61a3033/i/937694/0800e456-261d-4aef-a7c8-32c4b5fa1c9f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FopDo1jfe462a1eBhm4bHBzaMK/XERETiyfpg/CFAFQ="></script>
+    nonce="N4oMnAZhG1HLm4CvxNQLIImmoQVResPt4r40CWGNu6Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/937694/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/937694/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
