--- a/VRChat/86/937686.html
+++ b/VRChat/86/937686.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "q9mLhRW/NvPsWU/GhX84F8MjGN2dQ3w29WjQC4qLvag="></script>
+    "ChjQZdOhc5PUwA2fe91XUC0dZQJ0kS8Igmulkez3g8o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]キセル","description":"VRchat向けアクセサリ：キセル 582ポリゴン\n\nこちらのモデルデータは有料モデルですが、フリーで配布しているモデルでもあります。フリーでご利用頂く場合はそちらをご利用ください。\n\n[利用規約]\n\n・営利/非営利問わずご利用いただけます。\n\n・再配布は禁止です。\n\n本モデルデータを使用することによって何らかのトラブル・損失及び損害等が発生した場合でも当方は一切の責任を負いません。\n\nデータはAsset内にある元データのままです。\n導入方法はReadmeをご確認ください。","url":"https://booth.pm/ja/items/937686","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/985386bb-bc6d-41c5-b70d-4286e61a3033/i/937686/705cafec-aa80-493e-8dac-a77955ee9acd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="q9mLhRW/NvPsWU/GhX84F8MjGN2dQ3w29WjQC4qLvag="></script>
+    nonce="ChjQZdOhc5PUwA2fe91XUC0dZQJ0kS8Igmulkez3g8o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/937686/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               263
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/937686/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               263
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
